--- a/style.css
+++ b/style.css
@@ -30,7 +30,15 @@ h1
 .etape
 {
     background-color: #ffffff;
-    margin: 20px;
+    margin: 50px;
+}
+
+
+svg
+{
+    vertical-align: middle;
+    padding-left: 10px;
+    padding-right: 20px;
 }
 
 
@@ -39,18 +47,18 @@ h2
     background-color: #ff2644;
     padding: 10px;
     font-size: 60px;
+    margin: 0;
 }
 
 
 .content
 {
-    padding-right: 10px;
-    padding-left: 10px;
-    padding-bottom: 10px;
+    padding: 20px;
 }
 
 
 .compte_a_rebours
 {
-    font-size: 40px;
+    font-size: 30px;
+    text-align: justify;
 }
