--- a/style.css
+++ b/style.css
@@ -1,64 +1,108 @@
-body
+*
 {
-    background-color: #ffc5e6;
     margin: 0;
     font-family: Poppins;
 }
 
-
-header
+.background
 {
-    background-color: #ff257e;
+    height: 100vh;
+    width: 100vw;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    position: absolute;
+    overflow: hidden;
+    z-index: -10;
+}
+
+.background div
+{
+    border-radius: 3rem;
+}
+
+.one
+{
+    background-color: rgb(69, 14, 133);
+    grid-column: 1 / 4;
+    grid-row: 1 / 5;
+    animation: gradient 4s infinite;
+}
+
+.two
+{
+    background-color: #1215dd;
+    grid-column: 3 / 6;
+    grid-row: 1 / 4;
+    animation: gradient 4s infinite 2s;
+}
+
+.three
+{
+    background-color: rgb(132, 2, 227);
+    grid-column: 1 /4;
+    grid-row: 4 / 6;
+    animation: gradient 4s infinite 1s;
+}
+
+.four
+{
+    background-color: rgb(203, 60, 160);
+    grid-column: 3 / 6;
+    grid-row: 3 / 6;
+    animation: gradient 4s infinite 3s;
+}
+
+.five
+{
+    background-color: #13d6da;
+    grid-column: 5 / 6;
+    grid-row: 2 / 6;
+    animation: gradient 4s infinite 1s;
+}
+
+.background::after
+{
+    position: absolute;
+    content: "";
+    height: 100%;
+    width: 100%;
+    backdrop-filter: blur(200px);
+}
+
+@keyframes gradient
+{
+    50%
+    {
+        transform: scale(1.3);
+    }
+}
+
+main
+{
     display: flex;
-    flex-direction: row;
+    height: 100vh;
+    width: 100vw;
+    align-items: center;
     justify-content: center;
-    text-align: center;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    gap: 10px;
 }
 
-
-h1
+.img
 {
-    margin: 0;
-    color: white;
-    font-size: 80px
+    background-color: #000;
+    height: 500px;
+    width: 400px;
 }
 
-
-.etape
+.links-container
 {
-    background-color: #ffffff;
-    margin: 50px;
+    background-color: red;
+    display: flex;
+    flex-direction: column;
 }
 
-
-svg
+a
 {
-    vertical-align: middle;
-    padding-left: 10px;
-    padding-right: 20px;
-}
-
-
-h2
-{
-    background-color: #ff2644;
-    padding: 10px;
-    font-size: 60px;
-    margin: 0;
-}
-
-
-.content
-{
-    padding: 20px;
-}
-
-
-.compte_a_rebours
-{
-    font-size: 30px;
-    text-align: justify;
+    color: #fff;
+    text-decoration: none;
 }
