--- a/style.css
+++ b/style.css
@@ -125,6 +125,11 @@ a
     box-shadow: 0 1px 10px -6px rgba(0, 0, 0, .42), 0 1px 10px 0 rgba(0, 0, 0, .12), 0 4px 5px -2px rgba(0, 0, 0, .1);
 }
 
+a:hover
+{
+    transform: scale(1.05);
+}
+
 .icon
 {
     height: 3rem;
@@ -132,14 +137,17 @@ a
 
 p
 {
-    color: #fff;
     font-size: 2rem;
-
-    color: black;
+    color: #000;
 }
 
 @media screen and (max-width: 900px), screen and (max-height: 650px) 
 {
+    .container, .links-container
+    {
+        gap: 1rem;
+    }
+
     .photo
     {
         height: 350px;
@@ -162,7 +170,7 @@ p
     }
 }
 
-@media screen and (max-width: 900px)
+@media screen and (max-width: 650px)
 {
     .container
     {
